# syqure

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  all.sh  benchmark-report.md  benchmark.sh  bin_libs.sh  build-python.sh  build.sh  build_docker.sh  build_docker_syqure.sh  build_docker_syqure_files.sh  build_docker_syqure_files_overlay.sh  build_jupyter.sh  build_libs.sh  build_linux_docker.sh  build_python.sh  check_openmp.sh  ci.md  ci_preflight.sh  clippy.sh  compile_codon.sh  compile_codon_linux.sh  compile_codon_macos.sh  compile_sequre.sh  files.md  install_jupyter.sh  install_libpython.sh  install_python.sh  issues.md  jupyter.sh  lint.sh  lint_python.sh  load_docker.sh  run_tcp_demo.sh  save_docker.sh  sequre.sh  setup.md  (+1 more)
.github/workflows/: ci.yml  codon-binaries.yml  madhava-syqure-pipeline.yml  python-release.yml  refresh-bins.yml  release.yml  syqure-pipeline.yml
ci/: artifacts.json
compat/codon/config/: config.h
compat/fmt/: format.h  ostream.h  std.h
docker/: Dockerfile.sequre  Dockerfile.syqure  Dockerfile.syqure-files
docker/binaries/: codon-build.hash
example/: add_online.codon  simple_add.codon  syftbox_party.codon  syftbox_sum.codon  two_party_sum.codon  two_party_sum_simple.codon  two_party_sum_tcp.codon
notebooks/: syqure.ipynb
python/: .gitignore  Cargo.toml  build.rs  pyproject.toml
python/src/: lib.rs
python/syqure/: __init__.py
scripts/: build_python_postbundle.sh  create_installer.sh  macos-sign.sh  test_python_api.py  version_tools.py
syqure/: Cargo.toml  build.rs
syqure/bundles/: .gitkeep
syqure/src/: analyze.rs  bundle.rs  ffi.rs  lib.rs  runner.rs
syqure/src/ffi/: bridge.cc  bridge.h
