[workspace]
members = [
  "syqure",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/syqure"
keywords = ["codon", "sequre", "ffi", "cxx"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Madhava Jay <madhava@openmined.org>"]

[workspace.dependencies]
anyhow = "1.0"
cxx = "1.0"
cxx-build = "1.0"
thiserror = "1.0"
