[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "syqure"
version = "0.1.15"
description = "Python bindings for the syqure Rust library - Codon/Sequre compiler wrapper"
requires-python = ">=3.8,<3.14"
authors = [{ name = "Madhava Jay", email = "madhava@openmined.org" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OpenMined/syqure"

[tool.maturin]
module-name = "syqure"
features = []
# Include the bundled Codon/Sequre libs in the wheel
include = ["syqure/lib/**/*"]
