[package]
name = "syqure"
version = "0.1.17"
edition = "2021"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { workspace = true }
cxx = { workspace = true }
walkdir = "2.5"
thiserror = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
tar = "0.4"
zstd = { version = "0.13", default-features = false, features = ["legacy"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = { workspace = true }

[features]
# Use a runtime-provided bundle/cache instead of embedding bundle bytes.
runtime-bundle = []
